# todo-api

./: .env  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5b9e65d16cd6_create_users_and_todos_tables.py  ccab731bfbd1_add_user_id_to_todos.py
app/: main.py  requirements.txt
app/configs/: settings.py
app/database/: connections.py
app/database/models/: todo_models.py  user_models.py
app/routers/: list.py  user.py
app/schemas/: todo_schemas.py  user_schemas.py
app/services/: todo_service.py  user_service.py
app/utils/: dependencies.py  hash.py  key.py  token.py
